# llvm-embedded-coverage

./: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  env  memory.x  rustc_wrapper
.cargo/: config
src/: main.rs
