[package]
name = "llvm-embedded-coverage"
version = "0.1.0"
authors = ["Daniel McKenna <danielmckenna93@gmail.com>"]
description = "Use llvm coverage instrumentation on embedded targets"
repository = "https://github.com/xd009642/llvm-embedded-coverage"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
build = "build.rs"

[features]
alloc = []

[dependencies]
cfg-if = "1.0.0"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.7"
defmt-test = "0.2.3"
defmt = "0.2.3"
defmt-rtt = "0.2.0"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
debug = true
lto = true
